Fix z-index to click #deck-container

--- a/assets/css/layout.less
+++ b/assets/css/layout.less
@@ -17,11 +17,11 @@
 
 .deck-ui {
   position: relative;
-  z-index: 2;
   width: 100vw;
   height: 100vh;
 
   header {
+    z-index: 50;
     position: relative;
     width: 100%;
     height: @header_h;
@@ -52,6 +52,7 @@
   }
 
   aside {
+    z-index: 50;
     position: absolute;
     top: @header_h;
     left: 0;
@@ -100,6 +101,7 @@
       justify-content: space-between;
 
       .left_info {
+        z-index: 2;
         width: 24.857rem;
         height: 100%;
         display: flex;
@@ -170,6 +172,7 @@
       }
 
       .right_info {
+        z-index: 2;
         overflow: hidden;
         position: relative;
         width: 37.143rem;
@@ -209,6 +212,7 @@
     }
 
     .bottom_info {
+      z-index: 2;
       overflow: auto;
       width: 100%;
       height: calc(@btmdata_h - 2.143rem);
@@ -217,6 +221,7 @@
   }
 
   .deck-bubble {
+    z-index: 2;
     cursor: pointer;
     position: absolute;
     display: flex;
