--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@
 }
 .deck-ui {
   position: relative;
-  z-index: 2;
   width: 100vw;
   height: 100vh;
 }
 .deck-ui header {
+  z-index: 50;
   position: relative;
   width: 100%;
   height: 4.286rem;
@@ -45,6 +45,7 @@
   background-size: contain;
 }
 .deck-ui aside {
+  z-index: 50;
   position: absolute;
   top: 4.286rem;
   left: 0;
@@ -88,6 +89,7 @@
   justify-content: space-between;
 }
 .deck-ui .deck-content .type_upper .left_info {
+  z-index: 2;
   width: 24.857rem;
   height: 100%;
   display: flex;
@@ -144,6 +146,7 @@
   top: -9rem;
 }
 .deck-ui .deck-content .type_upper .right_info {
+  z-index: 2;
   overflow: hidden;
   position: relative;
   width: 37.143rem;
@@ -178,12 +181,14 @@
   border-radius: 0rem 0rem 1.071rem 1.071rem;
 }
 .deck-ui .deck-content .bottom_info {
+  z-index: 2;
   overflow: auto;
   width: 100%;
   height: calc(27vh - 2.143rem);
   background: #000;
 }
 .deck-ui .deck-bubble {
+  z-index: 2;
   cursor: pointer;
   position: absolute;
   display: flex;
